# py_sphorb

./: .gitignore  CMakeLists.txt  README.md  setup.py  test.py
include/: SPHORB.h  detector.h
python/: setup.py
python/py_sphorb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sphorb/: __init__.py  sphorb.py
src/: SPHORB.cpp  bindings.cpp  detector.cpp  main.cpp  sphorb_bindings.cpp
